更改 css banner 路徑

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,5 @@
 .header {
-    background: url(/img/banner.png) no-repeat center center;
+    background: url(../img/banner.png) no-repeat center center;
     background-size: cover;
     padding: 308px;
 
