--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ body {
 }
 
 .header {
-  background: url(/img/banner.png) no-repeat center center;
+  background: url(../img/banner.png) no-repeat center center;
   background-size: cover;
   padding: 308px;
 }
