--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,10 @@ a {
 }
 
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", "Roboto", "Helvetica Neue", Arial, sans-serif;
+}
+
+body {
   font-family: "Roboto", sans-serif;
 }
 
