--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -64,3 +64,7 @@ html {
 a {
 	text-decoration: none;
 }
+
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", "Roboto", "Helvetica Neue", Arial, sans-serif;
+}
